# multi-agent-ai-debate-arena

./: README.md  app.py  pyproject.toml  requirements.txt
src/: agents.py  graph.py  main.py  prompts.py  tools.py
